add documentation each endpoint
