# api/models/Photo.go
@@ -20,6 +20,18 @@ type Photo struct {
 	UpdatedAt time.Time `gorm:"default:CURRENT_TIMESTAMP" json:"updated_at"`
 }
 
+type CreatePhoto struct {
+	Title    string `json:"title"  binding:"required" example:"It Ends with Us Part 2"`
+	Caption  string `json:"caption"  binding:"required" example:"It Ends with Us is a romance novel by Colleen Hoover"`
+	PhotoURL string `json:"photo_url"  binding:"required" example:"https://media.istockphoto.com/id/1322123064/photo/portrait-of-an-adorable-white-cat-in-sunglasses-and-an-shirt-lies-on-a-fabric-hammock.jpg?s=612x612&w=0&k=20&c=-G6l2c4jNI0y4cenh-t3qxvIQzVCOqOYZNvrRA7ZU5o="`
+}
+
+type UpdatePhoto struct {
+	Title    string `json:"title"  binding:"required" example:"It Ends with Us Part 2 updated"`
+	Caption  string `json:"caption"  binding:"required" example:"It Ends with Us is a romance novel by Colleen Hoover updated"`
+	PhotoURL string `json:"photo_url"  binding:"required" example:"https://media.istockphoto.com/id/1322123064/photo/portrait-of-an-adorable-white-cat-in-sunglasses-and-an-shirt-lies-on-a-fabric-hammock.jpg?s=612x612&w=0&k=20&c=-G6l2c4jNI0y4cenh-t3qxvIQzVCOqOYZNvrRA7ZU5o="`
+}
+
 func (p *Photo) Prepare() {
 	p.Title = html.EscapeString(strings.TrimSpace(p.Title))
 	p.Caption = html.EscapeString(strings.TrimSpace(p.Caption))
